NIAD-969: code review fixes - Remove Setter annotation - Remove unused constants - Create PerformerNameAndAddress objects using Builder - Use StringUtils.isBlank in validate method